UI: fix workflow infobox layout (scrollbars instead of overflowing text)

--- a/core/htdocs_source/app/styles/app.css
+++ b/core/htdocs_source/app/styles/app.css
@@ -103,6 +103,10 @@ img.toplogo {
   font-size: 80%;
 }
 
+.oxi-infobox .card {
+  overflow-x: scroll;
+}
+
 /******************************************************************************
  * Vertical resize "button" bar
  */
